--- a/views/blocks/dock.ejs
+++ b/views/blocks/dock.ejs
@@ -56,8 +56,8 @@
                         <input class="form-check-input" type="checkbox" id="checkbox-show-all-info-alerts" checked>
                     </div>
                 </li>
-                <li><a class="btn btn-success my-1" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                        aria-controls="offcanvasExample">
+                <li><a class="btn btn-success my-1" data-bs-toggle="offcanvas" href="#offcanvas-app-aes-help-dock" role="button"
+                        aria-controls="offcanvas-app-aes-help-dock">
                         <i class="bi bi-info-circle-fill"></i>
                     </a></li>
                 <li><a class="btn btn-warning my-1" href="/framework"><i class="bi bi-arrow-clockwise"></i></a></li>
